--- a/lab2/build.gradle
+++ b/lab2/build.gradle
@@ -4,4 +4,5 @@ android.resourcePrefix 'lab2_'
 
 dependencies {
 	implementation "androidx.appcompat:appcompat:$appcompat"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
