--- a/lab4/src/main/AndroidManifest.xml
+++ b/lab4/src/main/AndroidManifest.xml
@@ -3,8 +3,7 @@
 	package="ru.tpu.courses.lab4"
 	>
 
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-		android:maxSdkVersion="18" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 	<application>
 		<activity android:name=".Lab4Activity" />
