--- a/lab5/build.gradle
+++ b/lab5/build.gradle
@@ -6,9 +6,11 @@ android {
     buildToolsVersion "29.0.3"
 
 
+
     defaultConfig {
 
         targetSdkVersion 29
+        minSdkVersion 14
         versionCode 1
         versionName "1.0"
 
